add get signature requests fn
