# apps/io-func-sign-user/openapi.yaml
@@ -248,6 +248,31 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
 
+  /signature-requests:
+    get:
+      operationId: getSignatureRequests
+      summary: Get the list of Signature Requests received by a Signer
+      tags:
+        - Signature Request
+      parameters:
+        - in: header
+          name: x-iosign-signer-id
+          schema:
+            type: string
+            description: Signer Id
+            minLength: 1
+            example: 01ARZ3NDEKTSV4RRFFQ69G5FAV
+          required: true
+      responses:
+        "200":
+          description: Signature Request list view
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SignatureRequestList"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+
   /messages/{signature_request_id}:
     get:
       operationId: getThirdPartyMessageDetails
@@ -737,12 +762,6 @@ components:
         id:
           $ref: "#/components/schemas/Id"
         status:
-          type: string
-          x-extensible-enum:
-            - WAIT_FOR_SIGNATURE
-            - WAIT_FOR_QTSP
-            - SIGNED
-            - REJECTED
           $ref: "#/components/schemas/SignatureRequestStatus"
         issuer:
           type: object
@@ -759,7 +778,6 @@ components:
         dossier_id:
           $ref: "#/components/schemas/Id"
         dossier_title:
-          type: string
           $ref: "#/components/schemas/DossierTitle"
         signer_id:
           $ref: "#/components/schemas/Id"
@@ -787,6 +805,45 @@ components:
         - documents
         - created_at
         - updated_at
+
+    SignatureRequestListView:
+      type: object
+      properties:
+        id:
+          $ref: "#/components/schemas/Id"
+        signer_id:
+          $ref: "#/components/schemas/Id"
+        dossier_id:
+          $ref: "#/components/schemas/Id"
+        dossier_title:
+          $ref: "#/components/schemas/DossierTitle"
+        status:
+          $ref: "#/components/schemas/SignatureRequestStatus"
+        created_at:
+          $ref: "#/components/schemas/Timestamp"
+        updated_at:
+          $ref: "#/components/schemas/Timestamp"
+        expires_at:
+          $ref: "#/components/schemas/Timestamp"
+      required:
+        - id
+        - signer_id
+        - dossier_id
+        - dossier_title
+        - status
+        - created_at
+        - updated_at
+        - expires_at
+
+    SignatureRequestList:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/SignatureRequestListView"
+      required:
+        - items
 
     ThirdPartyMessage:
       type: object
