# apps/io-func-sign-user/src/infra/azure/cosmos/signature-request.ts
@@ -2,21 +2,38 @@ import {
   CosmosdbModel,
   BaseModel,
   CosmosResource,
+  toCosmosErrorResponse,
 } from "@pagopa/io-functions-commons/dist/src/utils/cosmosdb_model";
 
 import * as t from "io-ts";
 import * as TE from "fp-ts/lib/TaskEither";
 
 import * as cosmos from "@azure/cosmos";
-import { pipe } from "fp-ts/lib/function";
+import { pipe, flow } from "fp-ts/lib/function";
 
 import { toCosmosDatabaseError } from "@io-sign/io-sign/infra/azure/cosmos/errors";
 
+import * as E from "fp-ts/lib/Either";
+import * as RA from "fp-ts/lib/ReadonlyArray";
+
+import * as H from "@pagopa/handler-kit";
+
+import {
+  flattenAsyncIterable,
+  asyncIterableToArray,
+} from "@pagopa/io-functions-commons/dist/src/utils/async";
+
+import { failure } from "io-ts/PathReporter";
+
+import { errorsToReadableMessages } from "@pagopa/ts-commons/lib/reporters";
+
+import { Signer } from "@io-sign/io-sign/signer";
 import {
   SignatureRequest,
   GetSignatureRequest,
   InsertSignatureRequest,
   UpsertSignatureRequest,
+  SignatureRequestRepository,
 } from "../../../signature-request";
 
 const NewSignatureRequest = t.intersection([SignatureRequest, BaseModel]);
@@ -71,3 +88,42 @@ export const makeUpsertSignatureRequest =
       (model) => model.upsert(signatureRequest),
       TE.mapLeft(toCosmosDatabaseError)
     );
+
+export class CosmosDbSignatureRequestRepository
+  implements SignatureRequestRepository
+{
+  #model: SignatureRequestModel;
+
+  constructor(db: cosmos.Database) {
+    this.#model = new SignatureRequestModel(db);
+  }
+
+  findBySignerId(signerId: Signer["id"]) {
+    return pipe(
+      TE.tryCatch(
+        () =>
+          asyncIterableToArray(
+            flattenAsyncIterable(
+              this.#model.getQueryIterator({
+                parameters: [
+                  {
+                    name: "@signerId",
+                    value: signerId,
+                  },
+                ],
+                query: `SELECT * FROM m WHERE m.signerId = @signerId`,
+              })
+            )
+          ),
+        toCosmosErrorResponse
+      ),
+      TE.mapLeft(toCosmosDatabaseError),
+      TE.chainEitherKW(
+        flow(
+          RA.sequence(E.Applicative),
+          E.mapLeft((errors) => new H.ValidationError(failure(errors)))
+        )
+      )
+    );
+  }
+}
