# apps/io-func-sign-user/src/infra/http/encoders/signature-request.ts
@@ -8,6 +8,8 @@ import * as S from "fp-ts/lib/string";
 import { NonEmptyString } from "@pagopa/ts-commons/lib/strings";
 import { SignatureRequestDetailView as SignatureRequestApiModel } from "../models/SignatureRequestDetailView";
 
+import { SignatureRequestListView } from "../models/SignatureRequestListView";
+
 import { SignatureRequestStatusEnum } from "../models/SignatureRequestStatus";
 
 import { ThirdPartyMessage as ThirdPartyMessageApiModel } from "../models/ThirdPartyMessage";
@@ -84,6 +86,46 @@ export const SignatureRequestToApiModel: E.Encoder<
       }
     }
   },
+};
+
+export const toSignatureRequestStatusEnum = (
+  status: SignatureRequest["status"]
+): SignatureRequestStatusEnum => {
+  switch (status) {
+    case "REJECTED":
+      return SignatureRequestStatusEnum.REJECTED;
+    case "SIGNED":
+      return SignatureRequestStatusEnum.SIGNED;
+    case "WAIT_FOR_QTSP":
+      return SignatureRequestStatusEnum.WAIT_FOR_QTSP;
+    case "WAIT_FOR_SIGNATURE":
+      return SignatureRequestStatusEnum.WAIT_FOR_SIGNATURE;
+  }
+};
+
+export const SignatureRequestToListView: E.Encoder<
+  SignatureRequestListView,
+  SignatureRequest
+> = {
+  encode: ({
+    id,
+    signerId: signer_id,
+    dossierId: dossier_id,
+    dossierTitle: dossier_title,
+    status,
+    createdAt: created_at,
+    updatedAt: updated_at,
+    expiresAt: expires_at,
+  }) => ({
+    id,
+    signer_id,
+    dossier_id,
+    dossier_title,
+    status: toSignatureRequestStatusEnum(status),
+    created_at,
+    updated_at,
+    expires_at,
+  }),
 };
 
 export const SignatureRequestToThirdPartyMessage: E.Encoder<
